Fix spacings throughout site

--- a/src/layouts/carousel.sass
+++ b/src/layouts/carousel.sass
@@ -10,7 +10,7 @@ h1.main-title
   position: absolute;
   z-index: 999;
   font-size: 48px;
-  top: 250px;
+  top: 12rem;
   left: 10vw;
   padding: 20px 30px;
   background-color: $white;
@@ -48,7 +48,6 @@ h1.main-title
   position: relative
   border: $carousel-border
   display: flex
-  margin: 0
   padding: 0
   left: -100%
   transform: translateX(100%)
@@ -125,6 +124,7 @@ h1.main-title
   height: auto
   border: none
   margin: auto
+  margin-bottom: 6rem
   padding: 0
   z-index: 0
 
